--- a/app/src/main/res/layout/pop.xml
+++ b/app/src/main/res/layout/pop.xml
@@ -3,16 +3,13 @@
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent"
-
-    android:background="@drawable/layout_popup_shape"
-    >
+    android:background="@drawable/layout_popup_shape">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="5dp">
-
 
         <TextView
             android:id="@+id/text"
@@ -54,7 +51,6 @@
                 android:layout_height="wrap_content"
                 android:text="Add Files ??"
                 android:textSize="35sp"
-
                 />
 
             <RadioGroup
@@ -92,6 +88,7 @@
             android:layout_height="wrap_content" />
 
         <Button
+            android:id="@+id/post_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
