--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -4,35 +4,47 @@
     tools:showIn="navigation_view">
 
     <group android:checkableBehavior="single">
-        <item
-            android:id="@+id/nav_camera"
-            android:icon="@drawable/ic_menu_camera"
-            android:title="Import" />
-        <item
-            android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="Gallery" />
-        <item
-            android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="Slideshow" />
-        <item
-            android:id="@+id/nav_manage"
-            android:icon="@drawable/ic_menu_manage"
-            android:title="Tools" />
+        <item android:title="Communicate">
+            <item
+                android:id="@+id/nav_home"
+                android:icon="@drawable/ic_menu_camera"
+                android:title="Home" />
+            </item>
     </group>
 
-    <item android:title="Communicate">
-        <menu>
-            <item
-                android:id="@+id/nav_share"
-                android:icon="@drawable/ic_menu_share"
-                android:title="Share" />
-            <item
-                android:id="@+id/nav_send"
-                android:icon="@drawable/ic_menu_send"
-                android:title="Send" />
-        </menu>
-    </item>
+    <group android:checkableBehavior="single">
+        <item android:title="Main">
+            <menu>
+                <item
+                    android:id="@+id/nav_hw"
+                    android:icon="@drawable/ic_menu_share"
+                    android:title="Home-Work" />
+                <item
+                    android:id="@+id/nav_ct"
+                    android:icon="@drawable/ic_menu_send"
+                    android:title="Class-Test" />
+                <item
+                    android:id="@+id/nav_ass"
+                    android:icon="@drawable/ic_menu_gallery"
+                    android:title="Assignment" />
+                <item
+                    android:id="@+id/nav_labr"
+                    android:icon="@drawable/ic_menu_slideshow"
+                    android:title="Lab-Report" />
+
+            </menu>
+        </item>
+    </group>
+
+    <group android:checkableBehavior="single">
+        <item android:title="Extra">
+            <menu>
+                <item
+                    android:id="@+id/nav_res"
+                    android:icon="@drawable/ic_menu_manage"
+                    android:title="Resources" />
+            </menu>
+        </item>
+    </group>
 
 </menu>
