--- a/app/src/main/res/layout/fragment_notice.xml
+++ b/app/src/main/res/layout/fragment_notice.xml
@@ -9,8 +9,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Notice Frag"
         android:gravity="center"
-        />
+        android:text="Notice Frag" />
 
 </FrameLayout>
