--- a/app/src/main/res/layout/item_horizontal.xml
+++ b/app/src/main/res/layout/item_horizontal.xml
@@ -2,7 +2,7 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="#96A6FF"
+    android:background="#DAFFAE"
     android:orientation="vertical">
 
     <ImageView
