--- a/app/src/main/res/layout/pop.xml
+++ b/app/src/main/res/layout/pop.xml
@@ -2,8 +2,7 @@
 
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/layout_popup_shape">
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
