--- a/app/src/main/res/layout/activity_pop_get.xml
+++ b/app/src/main/res/layout/activity_pop_get.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".Activities.PopGet">
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    android:layout_height="wrap_content"
+    tools:context=".activities.PopGet">
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_view_popget"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+    </android.support.v7.widget.RecyclerView>
 
 
 </LinearLayout>
